# QFcm

./: .gitignore  CMakeLists.txt  README.md  coverage.cmake  errors.cmake  meson.build  sanitizers.cmake
.github/workflows/: cmake.yml
os_read_lib/: CMakeLists.txt  os_test_main.cpp  os_utils.cpp  os_utils.h
src/: CMakeLists.txt  fcm_thread.cpp  fcm_thread.h  fcmanager.cpp  fcmanager.h  fcmanager_adapter.cpp  fcmanager_adapter.h  fcmthreadhandshake.cpp  fcmthreadhandshake.h  fcmthreadpoller.cpp  fcmthreadpoller.h  main.cpp  utils.h
src/agents/: agentdata.h  agentsinfo.h
src/common/: agentdata.h  database_query.h  messagebuilder.h  querybuilder.h  service_name_and_property.h  utils.h
src/common/message_spec/: messagereadable.h  messagereadable_data.h  messagereadable_handshake.h  messagereadable_nomessage.h  messagereadable_service.h  messagereadable_test.h  messagesendable.h  messagetypes.h
src/threads/: fcmWorker.cpp  fcmWorker.h  fcm_thread.cpp  fcm_thread.h
test/: CMakeLists.txt  conf.json  fcmanager.cpp
